依功能模組化

--- a/popup.html
+++ b/popup.html
@@ -9,9 +9,9 @@
     <button class="button_blue button30 fonts" id="keyInFxAccount">A帳號</button>
     <button class="button_blue button30 fonts" id="keyInOtherAccount">B帳號</button>
     <button style="height: 1px;"></button>
-    <button class="button_green button50 marleft5" id="synISWPTime">工作單</button>
+    <!-- <button class="button_green button50 marleft5" id="synISWPTime">工作單</button>
     <button class="button_green button50 button_yellow"  id="synISWPTime2">變更單</button>
-    <!-- <button class="button_blue button30" id="fortifyISWP">弱掃工作單</button> -->
+    <button class="button_blue button30" id="fortifyISWP">弱掃工作單</button> -->
     <div style="height: 3px;"></div>
 
     <button class="button_blue button30 marleft5" id="caF">憑證-F</button>
@@ -37,5 +37,7 @@
     <button class="button_blue button30" id="qrApply3" >QR-編輯</button>
     <div style="height: 5px;"></div>
     <script src="popup.js"></script>
+    <script src="card.js"></script>
+    <script src="cert.js"></script>
   </body>
 </html>
