優化iswp及信卡功能

--- a/popup.html
+++ b/popup.html
@@ -9,9 +9,12 @@
     <button class="button_blue button30 fonts" id="keyInFxAccount">A帳號</button>
     <button class="button_blue button30 fonts" id="keyInOtherAccount">B帳號</button>
     <button style="height: 1px;"></button>
-    <!-- <button class="button_green button50 marleft5" id="synISWPTime">工作單</button>
-    <button class="button_green button50 button_yellow"  id="synISWPTime2">變更單</button>
-    <button class="button_blue button30" id="fortifyISWP">弱掃工作單</button> -->
+
+    <button class="button_green button18 button_yellow marleft5"  id="job_chg">變更</button>
+    <button class="button_green button18 " style="font-size: 9px;" id="job_mobile">行動</button>
+    <button class="button_green button18" style="font-size: 9px;"id="job_online">線上</button>
+    <button class="button_blue button18" id="fortify">弱掃</button>
+    <button class="button_red button18" id="sync">同步</button>
     <div style="height: 3px;"></div>
 
     <button class="button_blue button30 marleft5" id="caF">憑證-F</button>
@@ -27,10 +30,10 @@
     <button class="button_green button30" id="cardA_edit">自行編輯</button>
     <button class="button_yellow button30"  id="cardB_edit">他行編輯</button>
     <div style="height: 2px;"></div>
-    <button class="button_red button30 marleft5 " id="qrVerifyCard" >QR卡</button>
-    <!-- <button class="button_green button30" id="qrApply0">條款0</button> -->
-    <button class="button_yellow button30" id="qrApply1">編輯1</button>
-    <button class="button_blue button30" id="qrApply2">編輯2</button>
+    <button class="button_red button22 marleft5 " id="qrVerifyOther" >QR</button>
+    <button class="button_red button22 " id="qrVerifyCard" >帳戶</button>
+    <button class="button_yellow button22" id="qrApply1">編輯1</button>
+    <button class="button_blue button22" id="qrApply2">編輯2</button>
     <div style="height: 2px;"></div>
     <button class="button_red button30 marleft5" id="qrVerifyOTP" >QR-OTP</button>
     <button class="button_green button30" id="qrApply0">條款0</button>
@@ -39,5 +42,6 @@
     <script src="popup.js"></script>
     <script src="card.js"></script>
     <script src="cert.js"></script>
+    <script src="iswp.js"></script>
   </body>
 </html>
